# HandWrite-CPP

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
.workbuddy/memory/: 2026-07-12.md  MEMORY.md
resources/: app.rc.in
src/: cli.cpp  config.cpp  config.hpp  core.cpp  core.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  tools.cpp  tools.hpp
ui/: mainwindow.ui
